force-app/main/default/objects/Room_Rate_Detail__c/Room_Rate_Detail__c.object-meta.xml
<CustomObject>
    <label>Room Rate Detail</label>
    <nameField>
        <label>Room Rate Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Room Rate Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>