force-app/main/default/objects/Room_Rate_Detail__c/fields/AgeQualifyingCode__c.field-meta.xml
<CustomField>
    <fullName>AgeQualifyingCode__c</fullName>
    <label>AgeQualifyingCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>