force-app/main/default/objects/Room_Rate_Detail__c/fields/AmountAfterTax__c.field-meta.xml
<CustomField>
    <fullName>AmountAfterTax__c</fullName>
    <label>AmountAfterTax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>