force-app/main/default/objects/Room_Rate_Detail__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>CurrencyCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>