force-app/main/default/objects/Room_Rate_Detail__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>departures dates</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Room Rate Details</relationshipLabel>
    <relationshipName>Room_Rate_Details</relationshipName>
    <type>Lookup</type>
</CustomField>