force-app/main/default/objects/Room_Rate_Detail__c/fields/NumberOfGuests__c.field-meta.xml
<CustomField>
    <fullName>NumberOfGuests__c</fullName>
    <label>NumberOfGuests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>