force-app/main/default/objects/Room_Rate_Detail__c/fields/Rate_Description__c.field-meta.xml
<CustomField>
    <fullName>Rate_Description__c</fullName>
    <label>Rate Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>