force-app/main/default/objects/Room_Rate_Detail__c/fields/Room_Rate_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Room_Rate_Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Room Rate Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>