force-app/main/default/objects/Room_Rate_Detail__c/recordTypes/Additional_Guest_Details.recordType-meta.xml
<RecordType>
    <fullName>Additional_Guest_Details</fullName>
    <active>true</active>
    <label>Additional Guest Details</label>
</RecordType>