force-app/main/default/objects/Room_Rate_Detail__c/recordTypes/Base_Guest_Details.recordType-meta.xml
<RecordType>
    <fullName>Base_Guest_Details</fullName>
    <active>true</active>
    <label>Base Guest Details</label>
</RecordType>