force-app/main/default/objects/Room_Rate_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NumberOfGuests__c</columns>
    <columns>AgeQualifyingCode__c</columns>
    <columns>AmountAfterTax__c</columns>
    <columns>Amount__c</columns>
    <columns>departures_dates__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Room_Rate_Unique_Identifier__c</columns>
    <columns>Rate_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>